--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mini-css-extract-plugin": "^1.4.0",
     "react-svg-loader": "^3.0.3",
     "style-loader": "^1.1.3",
+    "tailwindcss": "^3.4.3",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
     "webpack": "5.53.0",
