--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.21",
-    "css-loader": "^3.5.1",
+    "css-loader": "^7.1.1",
     "mini-css-extract-plugin": "^1.4.0",
     "style-loader": "^1.1.3",
     "tailwindcss": "^3.4.3",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.3",
-    "webpack": "5.53.0",
+    "webpack": "^5.91.0",
     "webpack-cli": "4.8.0",
     "webpack-node-externals": "^2.5.2"
   },
